--- a/CarRental/Views/Kliencis/Index.cshtml
+++ b/CarRental/Views/Kliencis/Index.cshtml
@@ -12,6 +12,9 @@
 <table class="table">
     <tr>
         <th>
+            @Html.DisplayNameFor(model => model.IDKlienta)
+        </th>
+        <th>
             @Html.DisplayNameFor(model => model.NazwaFirmy)
         </th>
         <th>
@@ -44,6 +47,9 @@
 @foreach (var item in Model) {
     <tr>
         <td>
+            @Html.DisplayFor(modelItem => item.IDKlienta)
+        </td>
+        <td>
             @Html.DisplayFor(modelItem => item.NazwaFirmy)
         </td>
         <td>
@@ -71,9 +77,9 @@
             @Html.DisplayFor(modelItem => item.Email)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.IDKlienta }) |
-            @Html.ActionLink("Details", "Details", new { id=item.IDKlienta }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.IDKlienta })
+            @Html.ActionLink("Edit", "Edit", new { id = item.IDKlienta }) |
+            @Html.ActionLink("Details", "Details", new { id = item.IDKlienta }) |
+            @Html.ActionLink("Delete", "Delete", new { id = item.IDKlienta })
         </td>
     </tr>
 }
